# plone.typesense

./: .copier-answers.yml  .copier-answers.zope-setup.yml  .gitignore  CHANGES.rst  CLAUDE.md  README.md  README.rst  STATUS.md  custom-constraints.txt  mutagen.yml  plone.typesense.code-workspace  pyproject.toml  start-typesense.sh  tasks.py
.claude/: settings.json  settings.local.json  statusline-command.sh
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  post-start.sh  setup-ai-tools.sh  setup-claude.sh
.github/workflows/: test.yml
instance/etc/: zope.conf
plans/: STATUS.md  gap-analyzis-improved-plan.md  gap-analyzis-normal-plan.md  gap-analyzis-splan.md  parallel-execution-plan.md
specs/: TODOS.md  indexing-strategies.md
src/plone/typesense/: __init__.py  blob_extraction.py  configure.zcml  filters.py  indexes.py  interfaces.py  manager.py  mapping.py  query.py  queueprocessor.py  result.py  scoped_search.py  setuphandlers.py  synonyms.py  testing.py  upgrades.py  utils.py
src/plone/typesense/browser/: configure.zcml  search.py
src/plone/typesense/controlpanels/typesense_controlpanel/: controlpanel.py
src/plone/typesense/global_utilities/: typesense.py
src/plone/typesense/locales/: update.py
src/plone/typesense/patches/: __init__.py  configure.zcml
src/plone/typesense/services/: configure.zcml  typesense.py
src/plone/typesense/subscribers/: configure.zcml  index_in_typesense.py
src/plone/typesense/tests/: test_backtick_placement.py  test_blob_extraction.py  test_brain_factory.py  test_catalog_lifecycle.py  test_connection_resilience.py  test_controlpanel_sync_indicator.py  test_deleted_catalog_indexes.py  test_facets.py  test_filter_syntax.py  test_filters.py  test_highlighting.py  test_indexes.py  test_indexing_pipeline.py  test_manager.py  test_mapping.py  test_patch_move_objects.py  test_query_assembler_registration.py  test_query_assembly_filters.py  test_real_typesense_search.py  test_schema_validation.py  test_scoped_search.py  test_search_view.py  test_services_typesense.py  test_setuphandlers.py  test_synonyms.py  test_typesense_indexing.py  test_upgrades.py  test_view_typesense_convert.py  test_view_typesense_sync.py
src/plone/typesense/views/: configure.zcml  scoped_search_key.py  typesense_convert.pt  typesense_convert.py  typesense_reindex_collection.pt  typesense_reindex_collection.py  typesense_sync.pt  typesense_sync.py
tests/: conftest.py  test_setup.py
